[package]
name = "surf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "surf"
path = "core/lib.rs"

[dependencies]
bytes = "1.2.1"
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["full"] }
napi = { version = "2", features = ["async"] }
napi-derive = "2"


[build-dependencies]
napi-build = "1"
